deslopcord-Lite.css
/**
 * @name deslopcord (Lite)
 * @author lixkote
 * @description Make Discord UI more simple, functional, and less cluttered. Made to slightly resemble mobile discord app, or pre-2025-redesign one.
 * @version 06.04.2026
 */

/* Remove float around user panel and dock it like before */

.panels__5e434 {
    flex: 0 0 auto;
    z-index: 10;
    border-bottom: 0px;
    border-right: 0px;
    border-left: 0px;
    border-radius: 0;
    bottom: 0px;
    margin-left: 63px;
    width: calc(var(--custom-guild-sidebar-width) - var(--custom-guild-list-width) - 1px);
}

:root {
    --guildbar-avatar-size: 46px;
    --blob-scale: 46;
    --guildbar-folder-size: var(--guildbar-avatar-size);
    --folder-blob-scale: var(--blob-scale);
    --custom-guild-list-padding: 12px;
    --custom-guild-list-width: calc(max(var(--guildbar-avatar-size), var(--guildbar-folder-size)) + var(--custom-guild-list-padding) * 2);
}

/* Server list styling revert */
nav[class*="guilds_"] {

    /* #svg-mask-squircle */
    defs>path {
        d: path("M0 0.464C0 0.301585 0 0.220377 0.0316081 0.158343C0.0594114 0.103776 0.103776 0.0594114 0.158343 0.0316081C0.220377 0 0.301585 0 0.464 0H0.536C0.698415 0 0.779623 0 0.841657 0.0316081C0.896224 0.0594114 0.940589 0.103776 0.968392 0.158343C1 0.220377 1 0.301585 1 0.464V0.536C1 0.698415 1 0.779623 0.968392 0.841657C0.940589 0.896224 0.896224 0.940589 0.841657 0.968392C0.779623 1 0.698415 1 0.536 1H0.464C0.301585 1 0.220377 1 0.158343 0.968392C0.103776 0.940589 0.0594114 0.896224 0.0316081 0.841657C0 0.779623 0 0.698415 0 0.536V0.464Z");
    }

    /* Guild sizing */
    defs,
    [class*="blobContainer_"],
    [class*="listItemWrapper__"],
    [class*="wrapper_"]:not([class*="listItem__"] > [class*="wrapper_"]),
    svg[class*="placeholderMask__"],
    svg:not([class*="placeholderMask__"])>foreignObject {
        width: var(--guildbar-avatar-size) !important;
        height: var(--guildbar-avatar-size) !important;
    }

    /* Guild drag & drop */
    [class*="dragInner__"] {
        width: 40px;
        height: 40px;
    }

    [class*="dragOver_"] {
        top: calc(var(--guildbar-avatar-size) / 2 + 8px)
    }

    /* Guild icon sizing */
    [class*="childWrapper__"]>svg {
        width: calc(var(--guildbar-avatar-size) - 18px);
        height: calc(var(--guildbar-avatar-size) - 18px);
    }

    /* Border radius transitions */
    [class*="childWrapper__"],
    [class*="childWrapper__"] img,
    [class*="icon_"],
    [class*="circleIconButton__"] {
        border-radius: 50% !important;
        transition: border-radius 150ms linear;
    }

    /* Selected state */
    [class*="selected__"] {

        [class*="childWrapper__"],
        [class*="childWrapper__"] img,
        [class*="icon_"],
        &[class*="circleIconButton__"] {
            border-radius: 27% !important;
        }
    }

    /* SVG positioning */
    [class*="shiftSVG_"] {
        top: 0;
        left: 0;

        foreignObject {
            transform: translate(-4px, -4px);
        }
    }

    /* Badge positioning */
    mask {
        --badge-offset: calc(var(--guildbar-avatar-size) - 40px);

        &:not([class*="folderHeader__"] mask) {
            use[href$="-lower_badge_masks"] {
                translate: var(--badge-offset) var(--badge-offset);
            }

            use[href$="-upper_badge_masks"] {
                translate: var(--badge-offset);
            }
        }

    }

    .wrapper_cc5dd2 > .svg_cc5dd2 foreignObject {
        mask: none;
        overflow: visible;
    }


    /* Folder styling */
    [class*="folderPreviewWrapper__"] {
        display: flex;
        justify-content: center;
        align-items: center;

        [class*="folderPreview__"] {
            width: calc(var(--guildbar-folder-size) * (2/3) + var(--custom-folder-preview-gap));
            height: calc(var(--guildbar-folder-size) * (2/3) + var(--custom-folder-preview-gap));
        }
    }

    [class*="iconSizeMini_"] {
        width: calc(var(--guildbar-folder-size) / 3);
        height: calc(var(--guildbar-folder-size) / 3);

        [class*="acronym_"] {
            line-height: calc(var(--guildbar-folder-size) / 3);
        }

        &[style*="font-size: 12px;"] {
            font-size: 10px !important;
        }

        &[style*="font-size: 10px;"] {
            font-size: 7px !important;
        }

        &[style*="font-size: 8px;"] {
            font-size: 6px !important;
        }
    }

    [class*="folderButton__"] {
        overflow: visible;
    }

    [class*="folderHeader__"] {
        --guildbar-avatar-size: var(--guildbar-folder-size);
    }

    [class*="folderIcon__"] {
        background-color: var(--bg-mod-subtle);

        svg {
            width: 24px !important;
            height: 24px !important;
        }
    }

    #guild-list-unread-dms>div {
    height: var(--guildbar-avatar-size) !important;
    }
}

/* Expanded folder styling */
[class*="isExpanded__"] {
    [class*="stack_"] {
        height: auto !important;
    }
}

/* Channel header container */
.privateChannelsHeaderContainer__99e7c {
    margin-top: 6px;
}

/* Message styling */
.editor__1b31f,
[class*="messageContent"],
[class*="message-content"] {
    color: white !important;
}

.inner_c0bea0 {
    z-index: 103;
}


/* Force "Today at" timestamp */
span[class*="timestampInline_"]>[aria-label^="Today at"]::before {
    content: "Today at ";
}
.container__37e49 {
    margin-inline-start: 0px;
}

.wrapper__72c38 {
    position: relative;
    --custom-input-background-color: var(--input-background-default);
    --custom-input-border-color: var(--input-border-default);
    --custom-input-text-color: var(--input-foreground-default);
    --custom-input-hover-border-color: var(--input-border-default-hover);
    --custom-input-focus-border-color: var(--input-border-active);
    align-items: center;
    background-color: var(--custom-input-background-color);
    border: 1px solid var(--custom-input-border-color);
    border-radius: var(--radius-sm);
    box-sizing: border-box;
    color: var(--custom-input-text-color);
    display: flex
    ;
    flex-wrap: wrap;
    gap: var(--space-4);
    transition: border-color .1s ease;
}

.wrapper_ef3116 {
    margin-bottom: 0;
}

.tabBar__133bf .addFriend__133bf.addFriend__133bf.addFriend__133bf {
    background-color: rgb(67, 162, 90);
    border-color: green;
    color: var(--white);
}

.sidebar__5e434:after {
    visibility: hidden;
}

.theme-dark [class^='base'] [class^='sidebar'] [class^='tree']:has(> [class^='itemsContainer'] > [class^='stack']) {
    background: transparent;
}

.stack_dbd263 {
    margin-bottom: -10;
}

.container__37e49 {
    border-radius: 0px;
}

.chatGradient__36d07 {
    visibility: hidden;
}

[class*="numberBadge"] {
    padding: 8px;
    border: 2px solid var(--background-base-lowest) !important;
    box-sizing: border-box;
}

